samples/_failures_safe/1761497066_6ba9b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f97d73e.c: In function ‘main’:
./samples/SAFE/__tmp_4f97d73e.c:137:9: error: expected expression at end of input
  137 |         char message[256] = {
      |         ^~~~
./samples/SAFE/__tmp_4f97d73e.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4f97d73e.c:137:9: error: expected declaration or statement at end of input
